{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 145,
  "lineage": "e4dd153a-10b0-7bb0-0d97-73c4294730da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:197204282783:internet-gateway/igw-0660fdb5f941df66c",
            "id": "igw-0660fdb5f941df66c",
            "owner_id": "197204282783",
            "tags": {
              "Name": "Foodbudget Internet Gateway"
            },
            "vpc_id": "vpc-0d2cc07f2eae59d70"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "foodbudget-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:197204282783:loadbalancer/app/foodbudget-lb/1d638a99d56a7053",
            "arn_suffix": "app/foodbudget-lb/1d638a99d56a7053",
            "dns_name": "foodbudget-lb-436905031.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:197204282783:loadbalancer/app/foodbudget-lb/1d638a99d56a7053",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "foodbudget-lb",
            "security_groups": [
              "sg-04080d346841ef569"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086e9bb537032f08e"
              },
              {
                "subnet_id": "subnet-0b3064d7cec0a843d"
              }
            ],
            "subnets": [
              "subnet-086e9bb537032f08e",
              "subnet-0b3064d7cec0a843d"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0d2cc07f2eae59d70",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_subnet.public-B",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:197204282783:targetgroup/api-target-group/d6cbac355fe68066",
            "arn_suffix": "targetgroup/api-target-group/d6cbac355fe68066",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:197204282783:targetgroup/api-target-group/d6cbac355fe68066",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d2cc07f2eae59d70"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0439a709bee9f5425",
            "owner_id": "197204282783",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0660fdb5f941df66c",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0660fdb5f941df66c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Foodbudget Route Table"
            },
            "vpc_id": "vpc-0d2cc07f2eae59d70"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5e381413bff4ca1",
            "route_table_id": "rtb-0439a709bee9f5425",
            "subnet_id": "subnet-086e9bb537032f08e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:197204282783:security-group/sg-04080d346841ef569",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04080d346841ef569",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accept all HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accept all HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web_trafic",
            "name_prefix": "",
            "owner_id": "197204282783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2cc07f2eae59d70"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:197204282783:subnet/subnet-086e9bb537032f08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-086e9bb537032f08e",
            "map_public_ip_on_launch": false,
            "owner_id": "197204282783",
            "tags": {
              "Name": "Foodbudget subnet A"
            },
            "vpc_id": "vpc-0d2cc07f2eae59d70"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:197204282783:subnet/subnet-0b3064d7cec0a843d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.24.0/24",
            "id": "subnet-0b3064d7cec0a843d",
            "map_public_ip_on_launch": false,
            "owner_id": "197204282783",
            "tags": {
              "Name": "Foodbudget subnet B"
            },
            "vpc_id": "vpc-0d2cc07f2eae59d70"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:197204282783:vpc/vpc-0d2cc07f2eae59d70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017e32bf41698d5a5",
            "default_route_table_id": "rtb-05f7097c5a2e1e6ec",
            "default_security_group_id": "sg-039fc55cf9d8fd13d",
            "dhcp_options_id": "dopt-07d42b65075bba17d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d2cc07f2eae59d70",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f7097c5a2e1e6ec",
            "owner_id": "197204282783",
            "tags": {
              "Name": "Foodbudget VPC"
            }
          }
        }
      ]
    }
  ]
}